--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -9,11 +9,17 @@
 
 {{!-- <h1>{{@model.title}}</h1> --}}
 
-<div class="rentals">
+{{!-- <div class="rentals">
+  <label>
+    <span>Where would you like to stay?</span>
+    <input class="light">
+  </label>
+
   <ul class="results">
     {{#each @model as |rental|}}
        <li><Rental @rental={{rental}} /></li>
     {{/each}}
   </ul>
-</div>
+</div> --}}
+<Rentals @rentals={{@model}} />
 {{!-- </div> --}}
